style: fix native date picker icon overflow

--- a/src/index.css
+++ b/src/index.css
@@ -90,3 +90,20 @@
   }
 }
 
+/* Fix Native Date Picker Glitches */
+input[type="date"]::-webkit-calendar-picker-indicator {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
+  opacity: 0;
+}
+
+input[type="date"] {
+  position: relative;
+}
+
